[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/player_sheet.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/shield.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 99, 77 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 198, 0, 99, 77 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 99, 0, 99, 77 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "left",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "right",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "straight",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=1]
radius = 28.0179

[node name="Player" type="Area2D" groups=["Player"]]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.75, 0.75 )
frames = SubResource( 5 )
animation = "straight"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="FiringPositions" type="Node2D" parent="."]

[node name="Left" type="Node2D" parent="FiringPositions"]
position = Vector2( -35, -10 )

[node name="Right" type="Node2D" parent="FiringPositions"]
position = Vector2( 34, -10 )

[node name="Firedelaytime" type="Timer" parent="."]
one_shot = true

[node name="InvincibilityTimer" type="Timer" parent="."]
one_shot = true

[node name="RapidFireTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="ShieldSprite" type="Sprite" parent="."]
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 3 )

[connection signal="timeout" from="InvincibilityTimer" to="." method="_on_InvincibilityTimer_timeout"]
[connection signal="timeout" from="RapidFireTimer" to="." method="_on_RapidFireTimer_timeout"]
